DFHack Future
    Internals:
        EventManager should handle INTERACTION triggers a little better. It still can get confused about who did what but only rarely.
        EventManager should no longer trigger REPORT events for old reports after loading a save.
        lua/persist-table.lua: a convenient way of using persistent tables of arbitrary structure and dimension in Lua
    Fixes:
        full-heal: Updated with proper argument handling.
        scripts/modtools/reaction-trigger-transition.lua
            should produce the correct syntax now
    New scripts:
        scripts/
            adaptation.rb
                view or set the cavern adaptation level of your citizens
            add-thought.lua
                allows the user to add thoughts to creatures.
            gaydar.lua
                detect the sexual orientation of units on the map
            devel/
                all-bob.lua: renames everyone Bob to help test interaction-trigger
    Misc improvements:
        lua/syndrome-util.lua
            now you can remove syndromes by SYN_CLASS
        scripts/modtools/add-syndrome.lua
            now you can remove syndromes by SYN_CLASS
        No longer writes empty .history files

DFHack 0.40.15-r1
    Fixes:
        - mousequery: Fixed behavior when selecting a tile on the lowest z-level
    Internals:
        - EventManager: deals with frame_counter getting reset properly now.
        - modtools/item-trigger: fixed equip/unequip bug and corrected minor documentation error
        - teleport: Updated with proper argument handling and proper unit-at-destination handling.
        - autotrade: Removed the newly obsolete "Mark all" functionality.
        - search: Adapts to the new trade screen column width
        - tweak fast-trade: Switching the fast-trade keybinding to Shift-Up/Shift-Down, due to Select All conflict

DFHack 0.40.14-r1
    Internals:
        - The DFHack console can now be disabled by setting the DFHACK_DISABLE_CONSOLE